hito 3 - renderizacion dinamica

--- a/src/components/CardPizza/cardPizza.css
+++ b/src/components/CardPizza/cardPizza.css
@@ -6,7 +6,7 @@
 }
 
 .pizza-card span {
-  justify-content: center;
+  justify-content: flex-start;
   display: flex;
   margin-bottom: -20px;
   font-size: 18px;
