--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -48,3 +48,13 @@ strong {
 .title-pizza {
   text-transform: capitalize;
 }
+
+.total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.total button {
+  width: 150px;
+}
